2006-01-26  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (input-line): new defstruct
	(*input-keymap*): new keybindings
	(*input-history*): new var
	(make-input-string): new function
	(read-one-line): use the input-line structure
	(draw-input-bucket): likewise. draw a cursor position. flash briefly on error.
	(input-delete-backward-char): new function
	(input-delete-char): remove function
	(input-delete-forward-char): new function
	(input-forward-char): likewise
	(input-backward-char): likewise
	(input-move-beginning-of-line): likewise
	(input-move-end-of-line): likewise
	(input-kill-line): likewise
	(input-kill-to-beginning): likewise
	(input-history-back): likewise
	(input-history-forward): likewise
	(input-submit): just return :done
	(input-self-insert): use input-line structure.
	(process-input): likewise

	* core.lisp (create-message-window-gcontext): only supply the foreground color.
	(create-inverse-gcontext): new function

2006-01-25  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (parse-and-run-command): fix macro expansion bug. only
	parse-integer when the argument is a string.

	* stumpwm.lisp (init-atoms): init +wm-state+ and +wm-protocols+

	* stumpwm.asd (:stumpwm): add kmap

	* primitives.lisp (+wm-state+): new var
	(+wm-protocols+): likewise
	(split-string): new function

	* input.lisp (*input-keymap*): new var
	(read-one-line): make input a string
	(code-state->key): new function
	(input-delete-char): likewise
	(input-submit): likewise
	(input-abort): likewise
	(input-self-insert): likewise
	(process-input): use keymaps to find key actions

2006-01-23  Shawn Betts  <sabetts@vcn.bc.ca>

	* stumpwm.lisp (stumpwm): set the display env. variable

	* primitives.lisp (setf getenv): new function

	* user.lisp (run-shell-command): call our own run-prog function

	* stumpwm.lisp (stumpwm): call our own getenv function

	* primitives.lisp (remove-plist): new function
	(run-prog): likewise
	(getenv): likewise

2004-11-30  Shawn Betts  <sabetts@vcn.bc.ca>
